--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1910,10 +1910,13 @@ body {
     width: 100%;
   }
   .wrapper4 .manage .manage__left img {
-    margin-top: 56%;
-    margin-left: 38%;
     width: 10rem;
     height: 10rem;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 186px;
   }
   .wrapper4 .manage .manage__right {
     width: 100%;
@@ -1922,11 +1925,12 @@ body {
   .wrapper4 .manage .manage__right hr {
     margin: auto;
   }
-  .wrapper4 .manage .manage__right .mange__right--name {
+  .wrapper4 .manage .manage__right .mange__right--name h2 {
     font-size: 2rem;
+    margin-bottom: 0;
   }
   .wrapper4 .manage .manage__right .manage__right--title h3 {
-    width: 90%;
+    width: 72%;
     margin: auto;
     font-size: 2rem;
   }
@@ -1949,10 +1953,15 @@ body {
   }
 
   .wrapper5 {
-    height: 170px;
+    height: 200px;
+    margin-top: 35px;
   }
   .wrapper5 .banner img {
-    height: auto;
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: 60% 50%;
   }
   .wrapper5 .banner .banner__title {
     font-size: 1.8rem;
@@ -1970,7 +1979,7 @@ body {
     margin-top: -95px;
   }
   .wrapper5 .banner .banner__video {
-    margin-top: 215px;
+    margin-top: 230px;
   }
   .wrapper5 .banner .banner__video .btn {
     font-size: 0.8rem;
@@ -1989,6 +1998,7 @@ body {
   }
   .wrapper6 .blog__more {
     flex-direction: column;
+    top: 45px;
   }
   .wrapper6 .blog__more .blog__view {
     width: 100%;
@@ -2020,7 +2030,7 @@ body {
   }
 
   .wrapper7 {
-    margin-top: 105px;
+    margin-top: 7rem;
     height: 360px;
   }
   .wrapper7 .footer {
@@ -2071,6 +2081,11 @@ body {
     font-size: 10px;
   }
 }
+/* @media (max-width:414px) and (min-width:376px){
+    .wrapper4 .manage .manage__left img{
+        margin-top: 46% !important;
+    }
+} */
 @keyframes fadeIn {
   from {
     opacity: 0;
