--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
 $color-cam: #fc846b;
 $color-white: #fff;
 $color-black: rgb(0, 0, 0);
@@ -12,6 +13,7 @@ $font-pop: "Poppins", sans-serif;
 $font-pop-noSan: "Poppins";
 $font-roboto: "Roboto", sans-serif;
 $font-playupdate: "Playfair Display SC", serif;
+$font-monserat : 'Montserrat', sans-serif;
 
 * {
     width: 100%;
@@ -263,50 +265,129 @@ body {
                     }
     
                 }
-/*                 @media (max-width:1023px){
-                    .nav_bars-btn{
-                        display: block;
-                    }
-                    #nav-pc{
-                        display: none;
-                    }
-                } */
-            
-/*             @media (max-width:1023px){
-                .header__left{
-                    width:70%;
-                }
-                .header__right{
-                    width: 30%;
-                }
-            } */
             .header__action {
                 width: 25%;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                img {
-                    width: 10%;
-                    margin-left: 10.2rem;
-                    margin-right: 0.5rem;
+                padding-left: 150px;
+                margin-top: 10px;
+                .lang-menu ul {
+                    margin: 0;
+                    padding: 0;
+                    display: none;
+                    background-color: #fff;
+                    position: absolute;
+                    top: 70px;
+                    right: 132px;
+                    width: 137px;
+                    border-radius: 5px;
+                    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
                 }
-                .fa-chevron-down{
-                    display: inline;
+                
+                
+                .lang-menu ul li {
+                    list-style: none;
+                    text-align: left;
+                    display: flex;
+                    justify-content: space-between;
                 }
-                p {
-                    font-size: 1.6rem;
-                    margin-right: -1.3rem;
-                    margin-bottom: 0;
-                    color: rgb(0, 0, 0);
-                }
-                a{
+                
+                .lang-menu > ul >  li > a {
+                    text-decoration: none;
+                    width: 100%;
+                    height: 100%;
+                    padding: 5px 10px;
                     display: block;
-                    text-align: center;
+                    margin-bottom: 0;
+                    color: $color-black;
+                    font-family: $font-monserat;
+                    font-size: 1.2rem;
+                    &:hover{
+                        background-color: $color-cam;
+                        color: $color-white;
+                    }
+                }
+                
+                .lang-menu ul li:hover {
+                    background-color: #f2f2f2;
+                }
+                
+                .lang-menu ul li a:before {
+                    content: '';
+                    display: inline-block;
+                    width: 25px;
+                    height: 25px;
+                    vertical-align: middle;
+                    margin-right: 10px;
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                }
+                
+                .de:before {
+                    background-image: url(https://cdn.countryflags.com/thumbs/germany/flag-800.png);
+                    margin-top: 10px;
+                }
+                
+                .en:before {
+                    background-image: url(https://www.countryflags.com/wp-content/uploads/united-states-of-america-flag-png-large.png);
+                    margin-top: 10px;
+                }
+                .fr:before {
+                    background-image: url(https://www.countryflags.com/wp-content/uploads/france-flag-png-large.png);
+                    margin-top: 10px;
+                }
+                
+                .kr:before {
+                    background-image: url(https://www.countryflags.com/wp-content/uploads/south-korea-flag-png-large.png);
+                    margin-top: 10px;
+                }
+                
+                
+                .lang-menu:hover ul {
+                    display: block;
+                }
+                .selected-lang{
+                    cursor: pointer;
+                    font-family: $font-monserat;
+                    color: $color-black;
+                    font-size: 1.5rem;
+                    display: flex;
+                    justify-content: space-between;
+                    margin-right: 10px;
+                    &:hover{
+                        color: $color-cam;
+                    }
+                    &::before{
+                        content: '';
+                        display: inline-block;
+                        width: 32px;
+                        height: 32px;
+                        background-image: url(https://www.countryflags.com/wp-content/uploads/vietnam-flag-png-large.png);
+                        background-size: contain;
+                        background-repeat: no-repeat;
+                        padding-top: 3px;
+                    }
+                    &::after{
+                        content: "\f078";
+                        font-family: "Font Awesome 5 Free";
+                        font-size: 10px;
+                        font-weight: bold;
+                        text-rendering: auto;
+                        // -webkit-font-smoothing: antialiased;
+                        margin-top: 3px;
+                        margin-right: 5px;
+                    }
+                }
+
+                a{       
+                    margin-bottom: 15px;
+                    padding : 0 10px; 
                     i {
                         color: #000;
                         cursor: pointer;
-                        font-size: 2.2rem;
-                        padding: 0 0.5rem;
+                        font-size: 2.5rem;
+                        display: block;
                     }
                 }
 
@@ -314,7 +395,7 @@ body {
         }
         .header__title {
             position: relative;
-            margin-top: 245px;
+            margin-top: 210px;
             width: 632px;
             margin-left: 90px;
             .header__title--name {
@@ -330,10 +411,10 @@ body {
                 width: 80%;
 
                 h2 {
-                    font-size: 40px;
+                    font-size: 44px;
                     font-family: $font-playfair-noSan;
                     margin-bottom: 18px;
-                    font-weight: 600;
+                    font-weight: 500;
                     color: #f87a61;
                 }
             }
@@ -349,12 +430,9 @@ body {
         }
     }
 }
-
-
 /* End Wrapper*/
 
 /* Begin Wrapper2*/
-
 .wrapper2 {
     position: relative;
     width: 100%;
@@ -853,8 +931,6 @@ body {
 }
 /*End wrapper6*/
 
-
-
 /*Begin Footer*/
 .wrapper7{
     width: 100%;
@@ -986,6 +1062,31 @@ body {
 }
 /*End Footer*/
 
+//Responsive Divide Latop, cac man hinh tu 1200 tro di
+
+@media (min-width:1599px){
+    .wrapper .header .header__nav .header__action {
+        width: 17%;
+    }
+    .wrapper4 .manage .manage__left {
+        width: 52%;
+    }
+    .wrapper4 .square-image {
+        width: 300px;
+        height: 300px;
+        margin-left: 170px;
+    }
+    .wrapper4 .manage .manage__left img{
+        margin-left: 300px;
+    }
+    .wrapper5 .banner__video .playvideo {
+        font-size: 2rem;
+    }
+    .wrapper7 .footer .search .submit{
+        left:215px;
+    }
+}
+
 // Responsive Divide Latop, cac man hinh tu 1024px den 1200px
 
 @media (max-width:1200px) and (min-width:1024px){
@@ -1011,7 +1112,11 @@ body {
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
-                    margin-right: 3rem;
+                    margin-right: 4rem;
+                    padding-left: 0;
+                    .lang-menu{
+                        display: none;
+                    }
                     img {
                         display: none;
                     }
@@ -1217,6 +1322,9 @@ body {
                     font-size: 1.8rem;
                 }
 
+            }
+            .lang-menu{
+                display: none;
             }
         }
     }
@@ -1579,7 +1687,9 @@ body {
                     font-size: 1.6rem;
                     
                 }
-
+            }
+            .lang-menu{
+                display: none;
             }
         }
     }
@@ -1919,6 +2029,7 @@ body {
                 .header__action{
                     justify-content: flex-end;
                     width: 25%;
+                    padding-left: 0;
                     #language,#language-text,#arrow-down,#arrow-down{
                         display: none;
                     }
@@ -1951,6 +2062,9 @@ body {
                     
                 }
 
+            }
+            .lang-menu{
+                display: none;
             }
         }
     }
@@ -2233,6 +2347,9 @@ body {
             }
             .footer--slogan{
                 top: 4.5rem;
+                &>h2{
+                    font-size: 2rem;
+                }
             }
             .search{
                 top: 72px;
@@ -2264,11 +2381,7 @@ body {
         }
     }
 }
-/* @media (max-width:414px) and (min-width:376px){
-    .wrapper4 .manage .manage__left img{
-        margin-top: 46% !important;
-    }
-} */
+
 @keyframes fadeIn {
     from{
         opacity: 0;
