--- a/assets/css/detail.scss
+++ b/assets/css/detail.scss
@@ -2545,7 +2545,7 @@ html{
                         padding: 0;
                         .img-main{
                             width: 100%;
-                            height: auto;  
+                            height: unset;  
                         }
                         .detail__left--listImg{
                            justify-content: space-around;
