--- a/assets/css/detail.scss
+++ b/assets/css/detail.scss
@@ -2545,12 +2545,13 @@ html{
                         padding: 0;
                         .img-main{
                             width: 100%;
-                            height: unset;  
+                            height: auto;  
                         }
                         .detail__left--listImg{
                            justify-content: space-around;
                             img{
                                 width: 25%;
+                                height: auto;
                                 height: auto;
                                 padding: 0;
                                 padding: 0 10px;
