--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -1783,6 +1783,9 @@ html {
     /*Mô tả sản phẩm*/
     /*câu hổi*/
   }
+  #detail .content__main .content__main--detail .detail .detail__left {
+    height: 430px;
+  }
   #detail .content__main .content__main--detail .detail .detail__left .img-main {
     width: 100%;
     height: auto;
@@ -1792,6 +1795,7 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__left .detail__left--listImg img {
     width: 25%;
+    height: initial;
     height: auto;
     padding: 0;
     padding: 0 10px;
@@ -1992,6 +1996,7 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__left {
     width: 100%;
+    height: 430px;
     padding: 0;
   }
   #detail .content__main .content__main--detail .detail .detail__left .img-main {
@@ -2003,14 +2008,14 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__left .detail__left--listImg img {
     width: 25%;
-    height: auto;
+    height: initial;
     padding: 0;
     padding: 0 10px;
     margin: 0;
   }
   #detail .content__main .content__main--detail .detail .detail__right {
     width: 100%;
-    margin-top: 20px;
+    margin-top: 232px;
   }
   #detail .content__main .content__main--detail .detail .detail__right .detail__right--vote .vote-right ul {
     width: 135%;
@@ -2256,6 +2261,7 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__left {
     width: 100%;
+    height: 465px;
     padding: 0;
   }
   #detail .content__main .content__main--detail .detail .detail__left .img-main {
@@ -2267,6 +2273,7 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__left .detail__left--listImg img {
     width: 25%;
+    height: initial;
     height: auto;
     height: auto;
     padding: 0;
@@ -2275,7 +2282,7 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__right {
     width: 100%;
-    margin-top: 20px;
+    margin-top: -40px;
   }
   #detail .content__main .content__main--detail .detail .detail__right #name {
     font-size: 24px;
@@ -2410,15 +2417,15 @@ html {
     height: 3623px;
   }
 
-  #detail .content__main .content__main--detail .detail .detail__left .detail__left--listImg img {
-    height: 69.45px;
+  #detail .content__main .content__main--detail .detail .detail__right {
+    margin-top: 0px;
   }
 }
-@media (min-width: 320px) and (max-width: 322) {
-  #aside-bar-mobile {
-    height: 3623px;
-  }
-}
+/* @media (min-width:320px) and (max-width:322){
+    #aside-bar-mobile{
+        height: 3623px;
+    }
+} */
 @keyframes fadeIn {
   from {
     opacity: 0;
