--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -1784,7 +1784,7 @@ html {
     /*câu hổi*/
   }
   #detail .content__main .content__main--detail .detail .detail__left {
-    height: 430px;
+    height: fit-content;
   }
   #detail .content__main .content__main--detail .detail .detail__left .img-main {
     width: 100%;
@@ -1795,7 +1795,7 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__left .detail__left--listImg img {
     width: 25%;
-    height: initial;
+    height: 62px;
     height: auto;
     padding: 0;
     padding: 0 10px;
@@ -1996,7 +1996,6 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__left {
     width: 100%;
-    height: 430px;
     padding: 0;
   }
   #detail .content__main .content__main--detail .detail .detail__left .img-main {
@@ -2015,7 +2014,6 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__right {
     width: 100%;
-    margin-top: 232px;
   }
   #detail .content__main .content__main--detail .detail .detail__right .detail__right--vote .vote-right ul {
     width: 135%;
@@ -2261,7 +2259,7 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__left {
     width: 100%;
-    height: 465px;
+    height: fit-content;
     padding: 0;
   }
   #detail .content__main .content__main--detail .detail .detail__left .img-main {
@@ -2282,7 +2280,6 @@ html {
   }
   #detail .content__main .content__main--detail .detail .detail__right {
     width: 100%;
-    margin-top: -40px;
   }
   #detail .content__main .content__main--detail .detail .detail__right #name {
     font-size: 24px;
