--- a/assets/css/detail.scss
+++ b/assets/css/detail.scss
@@ -1903,7 +1903,7 @@ html{
                 width: 100%;
                 .detail{
                     .detail__left{
-                        height: 430px;
+                        height: fit-content;
                         .img-main{
                             width: 100%;
                             height: auto;  
@@ -1912,7 +1912,7 @@ html{
                            justify-content: space-around;
                             img{
                                 width: 25%;
-                                height:initial;
+                                height:62px;
                                 height: auto;
                                 padding: 0;
                                 padding: 0 10px;
@@ -2198,7 +2198,6 @@ html{
                     justify-content: center;
                     .detail__left{
                         width: 100%;
-                        height: 430px;
                         padding: 0;
                         .img-main{
                             width: 100%;
@@ -2217,7 +2216,6 @@ html{
                     }
                     .detail__right{
                         width: 100%;
-                        margin-top: 232px;
                         #name{
                         }
                         .detail__right--vote{
@@ -2545,7 +2543,7 @@ html{
                     justify-content: center;
                     .detail__left{
                         width: 100%;
-                        height: 465px;
+                        height: fit-content;
                         padding: 0;
                         .img-main{
                             width: 100%;
@@ -2566,8 +2564,6 @@ html{
                     }
                     .detail__right{
                         width: 100%;        
-                        margin-top: -40px;
-
                         #name{
                             font-size: 24px;
                         }
