--- a/assets/css/detail.scss
+++ b/assets/css/detail.scss
@@ -2213,6 +2213,7 @@ html{
                     }
                     .detail__right{
                         width: 100%;
+                        margin-top: 20px;
                         #name{
                         }
                         .detail__right--vote{
@@ -2234,6 +2235,7 @@ html{
                         }
                         .detail__right--color{
                             .menu-color{
+                                margin-left: 95px;
                             }
     
                         }
@@ -2557,7 +2559,8 @@ html{
                         }
                     }
                     .detail__right{
-                        width: 100%;        
+                        width: 100%;
+                        margin-top: 20px;        
                         #name{
                             font-size: 24px;
                         }
@@ -2586,6 +2589,7 @@ html{
                         }
                         .detail__right--color{
                             .menu-color{
+                                margin-left: 95px;
                             }
     
                         }
